--- a/templates/quienes_somos.html
+++ b/templates/quienes_somos.html
@@ -7,11 +7,8 @@
                 style="width: 250px; height: 250px; object-fit: cover;" alt="Imagen de la Empresa">
         </div>
         <div class="col-md-6 text-center">
-            <h5>¿Quiénes somos?</h5>
-            <p>Artdotech es líder en innovación tecnológica, especializada en ofrecer soluciones de software a medida
-                que transforman ideas en realidad digital. Nuestro compromiso es impulsar el éxito de nuestros clientes
-                a
-                través de tecnología avanzada y creatividad sin límites.</p>
+            <h5>Nuestra Visión</h5>
+            <p>Ser reconocidos como un aliado estratégico en el desarrollo de soluciones tecnológicas en Latinoamérica, distinguidos por nuestra calidad, compromiso y capacidad para convertir desafíos en oportunidades digitales.</p>
         </div>
     </div>
 
@@ -22,10 +19,8 @@
                 style="width: 250px; height: 250px; object-fit: cover;" alt="Imagen de Misión">
         </div>
         <div class="col-md-6 text-center">
-            <h5>Misión</h5>
-            <p>En Artdotech, nuestra misión es impulsar la transformación digital de empresas y organizaciones mediante
-                soluciones tecnológicas innovadoras y personalizadas que superen las expectativas y generen un impacto
-                positivo en el mundo.</p>
+            <h5>Nuestra Misión</h5>
+            <p>Desarrollar soluciones tecnológicas innovadoras, seguras y personalizadas que acompañen a nuestros clientes en su proceso de transformación digital, superando sus expectativas y generando valor sostenible.</p>
         </div>
     </div>
 </div>
