--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,14 +40,14 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contáctanos</h5>
                     <p><i class="fas fa-phone-alt"></i> (+57) 310 2003551</p>
-                    <p><i class="fas fa-envelope"></i> info@artdotech.com</p>
+                    <p><i class="fas fa-envelope"></i> john.sierra@artdotech.com</p>
                 </div>
                 <div class="col-md-4 mb-3">
                     <h5>Síguenos en</h5>
                     <a href="https://www.facebook.com/Artdotech" target="_blank" class="text-light mr-3"><i
                             class="fab fa-facebook-f"></i>
                         Facebook</a>
-                    <a href="https://www.twitter.com/ArtdotechSas" target="_blank" class="text-light mr-3"><i
+                    <a href="https://x.com/ArtdotechSas" target="_blank" class="text-light mr-3"><i
                             class="fab fa-twitter"></i> Twitter</a>
                     <a href="https://www.instagram.com/artdotechsas" target="_blank" class="text-light"><i
                             class="fab fa-instagram"></i>
