--- a/templates/services.html
+++ b/templates/services.html
@@ -64,4 +64,39 @@
         </div>
     </div>
 </div>
+</div>
+
+<!-- Section: Industries Served -->
+<section class="py-5 bg-white border-top">
+    <div class="container text-center">
+        <h2 class="font-weight-bold mb-5">{{.T.industries_title}}</h2>
+        <div class="row justify-content-center">
+            <div class="col-6 col-md-3 mb-4">
+                <div class="p-4 border rounded shadow-sm h-100">
+                    <i class="fas fa-university fa-3x text-adt-blue mb-3"></i>
+                    <h5 class="font-weight-bold">{{.T.ind_fintech}}</h5>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="p-4 border rounded shadow-sm h-100">
+                    <i class="fas fa-heartbeat fa-3x text-adt-red mb-3"></i>
+                    <h5 class="font-weight-bold">{{.T.ind_health}}</h5>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="p-4 border rounded shadow-sm h-100">
+                    <i class="fas fa-shopping-cart fa-3x text-adt-orange mb-3"></i>
+                    <h5 class="font-weight-bold">{{.T.ind_retail}}</h5>
+                </div>
+            </div>
+            <div class="col-6 col-md-3 mb-4">
+                <div class="p-4 border rounded shadow-sm h-100">
+                    <i class="fas fa-truck fa-3x text-adt-purple mb-3"></i>
+                    <h5 class="font-weight-bold">{{.T.ind_logistics}}</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+</div>
 {{end}}
