--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,7 @@
                     <li class="nav-item"><a class="nav-link px-3" href="/about?lang={{.Lang}}">{{.T.nav_about}}</a></li>
                     <li class="nav-item"><a class="nav-link px-3"
                             href="/services?lang={{.Lang}}">{{.T.nav_services}}</a></li>
+                    <li class="nav-item"><a class="nav-link px-3" href="/blog?lang={{.Lang}}">{{.T.nav_blog}}</a></li>
                     <li class="nav-item"><a class="nav-link px-3 btn btn-outline-light ml-3 text-white rounded-pill"
                             href="/contact?lang={{.Lang}}">{{.T.nav_contact}}</a></li>
                     <!-- Language Switcher -->
