--- a/templates/services.html
+++ b/templates/services.html
@@ -36,7 +36,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-                <img src="/static/support.jpeg" class="img-fluid rounded mb-3 shadow-sm" alt="{{.T.srv_support_title}}">
+                <img src="/static/support.png" class="img-fluid rounded mb-3 shadow-sm" alt="{{.T.srv_support_title}}">
                 <h4 class="text-adt-red font-weight-bold">{{.T.srv_support_title}}</h4>
                 <p class="text-muted">{{.T.srv_support_desc}}</p>
             </div>
@@ -46,7 +46,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-                <img src="/static/integration.jpeg" class="img-fluid rounded mb-3 shadow-sm"
+                <img src="/static/integration.png" class="img-fluid rounded mb-3 shadow-sm"
                     alt="{{.T.srv_integration_title}}">
                 <h4 class="text-adt-orange font-weight-bold">{{.T.srv_integration_title}}</h4>
                 <p class="text-muted">{{.T.srv_integration_desc}}</p>
@@ -57,7 +57,7 @@
         <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-                <img src="/static/mobiles.jpeg" class="img-fluid rounded mb-3 shadow-sm" alt="{{.T.srv_mobile_title}}">
+                <img src="/static/mobiles.png" class="img-fluid rounded mb-3 shadow-sm" alt="{{.T.srv_mobile_title}}">
                 <h4 class="text-adt-blue font-weight-bold">{{.T.srv_mobile_title}}</h4>
                 <p class="text-muted">{{.T.srv_mobile_desc}}</p>
             </div>
